--- a/views/hr_leave_tracker_views.xml
+++ b/views/hr_leave_tracker_views.xml
@@ -142,84 +142,89 @@
 
     <!-- Leave Tracker Form View - FULLY EDITABLE -->
     <record id="view_hr_leave_tracker_form" model="ir.ui.view">
-        <field name="name">hr.leave.tracker.form</field>
-        <field name="model">hr.leave.tracker</field>
-        <field name="arch" type="xml">
-            <form string="Leave Tracker">
-                <sheet>
-                    <!-- Employee Selection -->
-                    <group string="Employee Selection">
-                        <field name="employee_id" options="{'no_create': False, 'no_open': False}"/>
-                        <field name="leave_type_id" options="{'no_create': False, 'no_open': False}"/>
-                        <field name="year"/>
-                    </group>
+    <field name="name">hr.leave.tracker.form</field>
+    <field name="model">hr.leave.tracker</field>
+    <field name="arch" type="xml">
+        <form string="Leave Tracker">
+            <sheet>
+                <!-- Employee Selection -->
+                <group string="Employee Selection">
+                    <field name="employee_id" options="{'no_create': False, 'no_open': False}"/>
+                    <field name="leave_type_id" options="{'no_create': False, 'no_open': False}"/>
+                    <field name="year"/>
+                </group>
 
-                    <!-- Leave Data -->
-                    <group string="Leave Data">
-                        <!-- Show total_dynamic only for Annual Leave -->
-                        <field name="total_dynamic"
-                            attrs="{'invisible': [('leave_type_name', '!=', 'Annual Leave')]}"/>
-                        
-                        <!-- Show total_allocation for all other leave types -->
-                        <field name="total_allocation"
-                            attrs="{'invisible': [('leave_type_name', '=', 'Annual Leave')]}"/>
-                        
-                        <field name="taken_leaves"/>
-                        <field name="pending_requests"/>
-                        
-                        <!-- Current balance dynamically computed -->
-                        <field name="current_balance" readonly="1"
-                            help="Automatically calculated as Total Allocation or Dynamic Total minus Taken Leaves"/>
-                        
-                        <!-- Annual leave carry info -->
-                        <field name="annual_carry"/>
-                        <field name="expired_carry"/>
-                    </group>
+                <!-- Leave Data -->
+                <group string="Leave Data">
+                    <!-- Show total_dynamic only for Annual Leave -->
+                    <field name="total_dynamic"
+                           attrs="{'invisible': [('leave_type_name', '!=', 'Annual Leave')]}"/>
+                    
+                    <!-- Show total_allocation for all other leave types -->
+                    <field name="total_allocation"
+                           attrs="{'invisible': [('leave_type_name', '=', 'Annual Leave')]}"/>
+                    
+                    <!-- Taken Leaves Display -->
+                    <field name="taken_display" readonly="1"
+                           string="Taken (Cutoff Applied)"
+                           help="Displays taken leaves. For Annual Leave, shows system-calculated leaves after June 30; otherwise shows taken leaves"/>
 
-                    <!-- Computed Info -->
-                    <group string="Computed Information" states="readonly">
-                        <field name="name" readonly="1"/>
-                        <field name="employee_name" readonly="1"/>
-                        <field name="employee_number" readonly="1"/>
-                        <field name="leave_type_name" readonly="1"/>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-    </record>
+                    <field name="pending_requests"/>
+                    
+                    <!-- Current balance dynamically computed -->
+                    <field name="current_balance" readonly="1"
+                           help="Automatically calculated as Total Allocation or Dynamic Total minus Taken Leaves"/>
+                    
+                    <!-- Annual leave carry info -->
+                    <field name="annual_carry"/>
+                    <field name="expired_carry"/>
+                </group>
+
+                <!-- Computed Info -->
+                <group string="Computed Information" states="readonly">
+                    <field name="name" readonly="1"/>
+                    <field name="employee_name" readonly="1"/>
+                    <field name="employee_number" readonly="1"/>
+                    <field name="leave_type_name" readonly="1"/>
+                </group>
+            </sheet>
+        </form>
+    </field>
+</record>
+
 
 
     <!-- Leave Tracker Tree View - FULLY EDITABLE -->
     <record id="view_hr_leave_tracker_tree" model="ir.ui.view">
-    <field name="name">hr.leave.tracker.tree</field>
-    <field name="model">hr.leave.tracker</field>
-    <field name="arch" type="xml">
-        <tree string="Leave Trackers" create="true" edit="true" delete="true" editable="bottom">
-            <!-- Header button removed to prevent ParseError -->
-            
-            <field name="employee_id" required="1"/>
-            <field name="employee_number" string="Employee ID" readonly="1"/>
-            <field name="department_id" string="Department" readonly="1"/>
-            <field name="leave_type_id" required="1"/>
-            <field name="year"/>
-            
-            <!-- Total column -->
-            <field name="display_total" string="Total"/>
-            
-            <field name="taken_leaves"/>
-            <field name="pending_requests"/>
-            <field name="current_balance" readonly="1"
-                decoration-danger="current_balance &lt;= 0"
-                decoration-warning="current_balance &gt; 0 and current_balance &lt; 3"/>
-            <field name="annual_carry" readonly="1"/>
-            <field name="expired_carry" readonly="1"/>
-            
-            <!-- Reference fields (hidden) -->
-            <field name="employee_name" invisible="1"/>
-            <field name="leave_type_name" invisible="1"/>
-        </tree>
-    </field>
-</record>
+        <field name="name">hr.leave.tracker.tree</field>
+        <field name="model">hr.leave.tracker</field>
+        <field name="arch" type="xml">
+            <tree string="Leave Trackers" create="true" edit="true" delete="true" editable="bottom">
+                <!-- Header button removed to prevent ParseError -->
+                
+                <field name="employee_id" required="1"/>
+                <field name="employee_number" string="Employee ID" readonly="1"/>
+                <field name="department_id" string="Department" readonly="1"/>
+                <field name="leave_type_id" required="1"/>
+                <field name="year"/>
+                
+                <!-- Total column -->
+                <field name="display_total" string="Total"/>
+                
+                <field name="taken_display"/>
+                <field name="pending_requests"/>
+                <field name="current_balance" readonly="1"
+                    decoration-danger="current_balance &lt;= 0"
+                    decoration-warning="current_balance &gt; 0 and current_balance &lt; 3"/>
+                <field name="annual_carry" readonly="1"/>
+                <field name="expired_carry" readonly="1"/>
+                
+                <!-- Reference fields (hidden) -->
+                <field name="employee_name" invisible="1"/>
+                <field name="leave_type_name" invisible="1"/>
+            </tree>
+        </field>
+    </record>
 
 
 
